--- a/.github/workflows/generate-docs.yaml
+++ b/.github/workflows/generate-docs.yaml
@@ -10,8 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Mermaids
+      - name: Setup NodeJS
         uses: actions/setup-node@v2.1.5
+      - name: Install mermaid-js cli
         run: |
           npm install @mermaid-js/mermaid-cli
       - name: Generate docs
