--- a/data-fetchers/python-webscraper/requirements.txt
+++ b/data-fetchers/python-webscraper/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.5.7
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.12.5
@@ -5,12 +6,14 @@ chardet==4.0.0
 EasyProcess==0.3
 html5lib==1.1
 idna==2.10
-lxml==4.6.3
-phantomjs==1.4.1
-PyVirtualDisplay==2.1
+kazoo==2.5.0
+pycodestyle==2.7.0
+pykafka==2.8.0
 requests==2.25.1
 selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
+tabulate==0.8.9
+toml==0.10.2
 urllib3==1.26.4
 webencodings==0.5.1
