--- a/data-fetchers/python-webscraper/Dockerfile
+++ b/data-fetchers/python-webscraper/Dockerfile
@@ -1,5 +1,9 @@
 # For more information, please refer to https://aka.ms/vscode-docker-python
-FROM python:3.8-slim-buster
+FROM python:3.8
+
+# Install missing dependencies
+RUN apt-get update
+RUN apt-get install -y firefox-esr
 
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE=1
