mvn deploy from correct directory

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -28,6 +28,8 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: | 
+          cd models/generated/kotlin
+          mvn --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
