--- a/as-api/src/main/resources/application.conf
+++ b/as-api/src/main/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.jetbrains.handson.httpapi.ApplicationKt.module ]
+        modules = [ no.aksjesimulator.ApplicationKt.module ]
     }
 }
