--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-serialization:$ktor_version"
+    implementation("io.ktor:ktor-gson:$ktor_version")
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
 
