--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,7 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-
 ### Gradle Patch ###
 **/build/
+
+out/
