--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation("io.ktor:ktor-gson:$ktor_version")
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "io.ktor:ktor-mustache:$ktor_version"
+    implementation "io.ktor:ktor-server-sessions:$ktor_version"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
