--- a/.github/workflows/generate-models.yml
+++ b/.github/workflows/generate-models.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Generate docs
         run: |
           cd models
-          openapi-generator-cli generate \
+          npx @openapitools/openapi-generator-cli generate \
             -g kotlin \
             -i openapi.yaml \
             -o generated-kotlin \
