--- a/.github/workflows/generate-models.yml
+++ b/.github/workflows/generate-models.yml
@@ -11,9 +11,6 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.1.5
@@ -31,10 +28,9 @@ jobs:
             --global-property models
       - name: Commit and push generated models
         run: |
-          git config --local user.email generate-models[bot]@aksjesimulator.no
-          git config --local user.name generate-models[bot]
-          git add models/generated-kotlin/*
-          git commit -m "Generated models updated according to latest spec"
+          git config --global user.name generate-models-bot
+          git config --global user.email generate-models-bot@users.noreply.github.com
+          git commit -am "Generated models updated according to latest spec"
           git push
       - name: Build and publish Gradle package
         env:
