--- a/.github/workflows/generate-models.yml
+++ b/.github/workflows/generate-models.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           git config --global user.name generate-models-bot
           git config --global user.email generate-models-bot@users.noreply.github.com
-          git commit -am "Generated models updated according to latest spec"
+          git add models/generated-kotlin/*
+          git commit -m "Generated models updated according to latest spec"
           git push
       - name: Build and publish Gradle package
         env:
