--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "io.ktor:ktor-mustache:$ktor_version"
     implementation "io.ktor:ktor-server-sessions:$ktor_version"
+    implementation "no.aksjesimulator:datamodels:$aksjesimulator_datamodels_version"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
@@ -38,4 +39,15 @@ compileTestKotlin {
 
 application {
     mainClassName = 'no.aksjesimulator.ApplicationKt'
+}
+
+repositories {
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/oleskrede/aksjesimulator")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_REPOSITORY")
+            password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
