--- a/models/generated-kotlin/build.gradle
+++ b/models/generated-kotlin/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'maven-publish'
 
 repositories {
     maven { url "https://repo1.maven.org/maven2" }
@@ -33,4 +34,22 @@ dependencies {
     compile "com.squareup.moshi:moshi-kotlin:1.11.0"
     compile "com.squareup.okhttp3:okhttp:4.9.0"
     testCompile "io.kotlintest:kotlintest-runner-junit5:3.4.2"
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/oleskrede/aksjesimulator")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_REPOSITORY")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.kotlin)
+        }
+    }
 }
