--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -14,6 +14,14 @@ repositories {
     maven {
         url "https://kotlin.bintray.com/kotlinx"
     }
+    maven {
+        name = "GitHubPackages"
+        url = uri("https://maven.pkg.github.com/oleskrede/aksjesimulator")
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USER")
+            password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
@@ -21,7 +29,7 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-serialization:$ktor_version"
-    implementation("io.ktor:ktor-gson:$ktor_version")
+    implementation "io.ktor:ktor-gson:$ktor_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "io.ktor:ktor-mustache:$ktor_version"
     implementation "io.ktor:ktor-server-sessions:$ktor_version"
@@ -38,16 +46,5 @@ compileTestKotlin {
 }
 
 application {
-    mainClassName = 'no.aksjesimulator.ApplicationKt'
-}
-
-repositories {
-    maven {
-        name = "GitHubPackages"
-        url = uri("https://maven.pkg.github.com/oleskrede/aksjesimulator")
-        credentials {
-            username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_REPOSITORY")
-            password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
-        }
-    }
+    mainClassName = 'no.aksjesimulator.ServerKt'
 }
