--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "io.ktor:ktor-mustache:$ktor_version"
     implementation "io.ktor:ktor-server-sessions:$ktor_version"
+    implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "no.aksjesimulator:datamodels:$aksjesimulator_datamodels_version"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
