add kafka dependency

--- a/as-api/build.gradle
+++ b/as-api/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation "io.ktor:ktor-server-sessions:$ktor_version"
     implementation "io.ktor:ktor-auth:$ktor_version"
     // implementation "no.aksjesimulator:datamodels:$aksjesimulator_datamodels_version"
-    implementation "org.apache.kafka:kafka-clients:$kafka_version"
+    implementation "org.apache.kafka:kafka-clients:2.0.0"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
