--- a/as-api/gradle.properties
+++ b/as-api/gradle.properties
@@ -4,5 +4,5 @@ kotlin_version=1.5.10
 logback_version=1.2.3
 kotlin_serialization=1.1.0
 moshi_version=1.12.0
+#kafka_verision=2.0.0
 # aksjesimulator_datamodels_version=0.3
-kafka_verision=2.0.0
