postgresql in docker-compose and connection from as-api

--- a/as-api/gradle.properties
+++ b/as-api/gradle.properties
@@ -4,5 +4,10 @@ kotlin_version=1.5.10
 logback_version=1.2.3
 kotlin_serialization=1.1.0
 moshi_version=1.12.0
-#kafka_verision=2.0.0
+kafkaVersion=2.0.1
+klaxonVersion=5.5
+exposedVersion=0.31.1
+konfigVersion=1.6.10.0
+hikariVersion=4.0.3
+postgresqlVersion=42.2.22
 # aksjesimulator_datamodels_version=0.3
