--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,13 @@ services:
     ports:
       - 5432:5432
     volumes: 
-      - ./db-data/:/var/lib/postgresql/data/
+      - db-data:/var/lib/postgresql/data/
   
   pythonwebscraper:
     image: pythonwebscraper
+    restart: always
     build:
       context: ./data-fetchers/python-webscraper
+
+volumes: 
+  db-data:
