--- a/as-api/gradle.properties
+++ b/as-api/gradle.properties
@@ -10,4 +10,5 @@ exposedVersion=0.31.1
 konfigVersion=1.6.10.0
 hikariVersion=4.0.3
 postgresqlVersion=42.2.22
+flywayVersion=7.11.0
 # aksjesimulator_datamodels_version=0.3
